💄 fixed grid elements alignment on mobile

--- a/files/css/_base.scss
+++ b/files/css/_base.scss
@@ -748,6 +748,7 @@ table {
         &.but-mobile-down {
             display: flex;
             flex-direction: column;
+            align-items: initial;
         }
 
         &.center, &.middle {
